--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -109,5 +109,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <TextView
+        android:id="@+id/currentUserTextView"
+        android:text="@string/Current_User"
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="#ff0"
+        app:layout_constraintBottom_toTopOf="@+id/runNextCodeButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
